[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TURTLE_Chem"
version = "0.1.0"
authors = [
    {name = "Dominick Filonowich", email = "filonoiwchd74@gmail.com"},
]
dependencies = [
    "pandas",
    "numpy",
]
description = "Design, create, and generate unique, complex molecular structures of any shape and size!"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Dfilono/Molecule-Builder"
"Bug Tracker" = "https://github.com/Dfilono/Molecule-Builder/issues"
