[metadata]
name = TurtleMol
author = Dominick Filonowich
author_email = filonowichd74@gmail.com
description = Design, create, and generate unique, complex molecular structures of any shape and size!
icense = MIT license
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires= >=3.7

[versioneer]
VCS = git
style = pep440
versionfile_source = TurtleMol/_version.py
versionfile_build = TurtleMol/_version.py
tag_prefix = ''